--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -172,7 +172,7 @@
         list.push("P1-Villa-34,@Vijay Meena,@,@,@,@"); 
         list.push("P1-Villa-35,@D V Saraswat & Kusum Saraswat,@,@,@,@"); 
         list.push("P1-Villa-36,@Harish Kumar Yadav,@,@,@,@"); 
-        list.push("P1-Villa-37,@Gajendra Sharma,@,@,@,@"); 
+        list.push("P1-Villa-37,@Gajendra Sharma,@1000,@,@,@"); 
         list.push("P1-Villa-38,@ManishaSingh,@,@,@,@"); 
         list.push("P1-Villa-39,@Manish Salvi,@,@,@,@"); 
         list.push("P1-Villa-40,@Anita Kanwar,@,@,@,@"); 
