--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -160,7 +160,7 @@
         list.push("P1-Villa-21,@Dariya Singh,@,@,@,@"); 
         list.push("P1-Villa-22,@Shivani sanjeev sharma,@,@,@,@"); 
         list.push("P1-Villa-23,@Akshay Saraswat,@,@,@,@"); 
-        list.push("P1-Villa-24,@Abhimanyu Saraswat,@,@,@,@"); 
+        list.push("P1-Villa-24,@Abhimanyu Saraswat,@1000,@,@,@"); 
         list.push("P1-Villa-25,@Pooja Khandelwal,@,@,@,@"); 
         list.push("P1-Villa-26,@Rakesh Kumar,@1000,@,@,@"); 
         list.push("P1-Villa-27,@Deepesh Sharma,@,@,@,@"); 
@@ -178,7 +178,7 @@
         list.push("P1-Villa-39,@Manish Salvi,@,@,@,@"); 
         list.push("P1-Villa-40,@Anita Kanwar,@,@,@,@"); 
         list.push("P1-Villa-41,@Monika Mittal,@,@,@,@"); 
-        list.push("P1-Villa-42,@Prakash Gaur,@,@,@,@"); 
+        list.push("P1-Villa-42,@Prakash Gaur,@1000,@,@,@"); 
         list.push("P1-Villa-43,@Arun Tripathi,@,@,@,@"); 
         list.push("P1-Villa-44,@Ravindra Verma,@,@,@,@"); 
         list.push("P1-Villa-45,@Nand Singh Rajawat,@,@,@,@"); 
