--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -174,7 +174,7 @@
         list.push("P1-Villa-36,@Harish Kumar Yadav,@,@,@,@"); 
         list.push("P1-Villa-37,@Gajendra Sharma,@1000,@,@,@"); 
         list.push("P1-Villa-38,@ManishaSingh,@,@,@,@"); 
-        list.push("P1-Villa-39,@Manish Salvi,@,@,@,@"); 
+        list.push("P1-Villa-39,@Manish Salvi,@1000,@,@,@"); 
         list.push("P1-Villa-40,@Anita Kanwar,@,@,@,@"); 
         list.push("P1-Villa-41,@Monika Mittal,@,@,@,@"); 
         list.push("P1-Villa-42,@Prakash Gaur,@1000,@,@,@"); 
