--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -145,7 +145,7 @@
         list.push("P1-Villa-07,@Rahul Pandey,@,@,@,@"); 
         list.push("P1-Villa-08,@Anil Sharma,@,@,@,@"); 
         list.push("P1-Villa-09,@Raghvendra Sharma,@,@,@,@"); 
-        list.push("P1-Villa-10,@Jogendra Sachdeva,@,@,@,@"); 
+        list.push("P1-Villa-10,@Jogendra Sachdeva,@1000,@,@,@"); 
         list.push("P1-Villa-11,@Sundeep Mahala,@,@,@,@"); 
         list.push("P1-Villa-12,@Gaurav Kothari,@,@,@,@"); 
         list.push("P1-Villa-13,@Anil Sharma,@,@,@,@"); 
@@ -201,7 +201,7 @@
         list.push("P1-Villa-68,@Shrish Jaiman,@,@,@,@"); 
         list.push("P1-Villa-69,@Piyush Sharma,@,@,@,@"); 
         list.push("P1-Villa-70,@Vineet Sharma,@,@,@,@"); 
-        list.push("P1-Villa-71,@Suresh kumar Sharma,@,@,@,@"); 
+        list.push("P1-Villa-71,@Suresh kumar Sharma,@1000,@,@,@"); 
         list.push("P1-Villa-72,@Nikesh Chaudhary,@,@,@,@"); 
         list.push("P1-Villa-73,@Richa Sharma,@,@,@,@"); 
         list.push("P1-Villa-74,@Praveen Kumar Prajapat,@,@,@,@"); 
