--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -142,7 +142,7 @@
         list.push("P1-Villa-04,@Bhupesh Saini,@,@,@,@"); 
         list.push("P1-Villa-05,@Shishir Maltiyar,@,@,@,@"); 
         list.push("P1-Villa-06,@Hemant Kumar,@,@,@,@"); 
-        list.push("P1-Villa-07,@Rahul Pandey,@,@,@,@"); 
+        list.push("P1-Villa-07,@Rahul Pandey,@1000,@,@,@"); 
         list.push("P1-Villa-08,@Anil Sharma,@,@,@,@"); 
         list.push("P1-Villa-09,@Raghvendra Sharma,@,@,@,@"); 
         list.push("P1-Villa-10,@Jogendra Sachdeva,@1000,@,@,@"); 
