--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -194,7 +194,7 @@
 
         list.push("P1-Villa-62,@Lal Singh,@,@,@,@"); 
         list.push("P1-Villa-63,@Yogesh Ji,@,@,@,@"); 
-        list.push("P1-Villa-64,@Sahil Meghnani,@,@,@,@");
+        list.push("P1-Villa-64,@Sahil Meghnani,@1000,@,@,@");
         list.push("P1-Villa-65,@Jalaj Rajpurohit,@1000,@,@,@");
         list.push("P1-Villa-66,@Manju Gehlot,@,@,@,@");
         list.push("P1-Villa-67,@Abhishek Jaiman,@,@,@,@"); 
