--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -205,7 +205,7 @@
         list.push("P1-Villa-72,@Nikesh Chaudhary,@,@,@,@"); 
         list.push("P1-Villa-73,@Richa Sharma,@,@,@,@"); 
         list.push("P1-Villa-74,@Praveen Kumar Prajapat,@,@,@,@"); 
-        list.push("P1-Villa-75,@Archna Goswami,@,@,@,@"); 
+        list.push("P1-Villa-75,@Archna Goswami,@1000,@,@,@"); 
         list.push("P1-Villa-76,@Surya Nagal,@,@,@,@"); 
         list.push("P1-Villa-77,@Devki Nandan Mathuriya,@,@,@,@"); 
         list.push("P1-Villa-78,@Akshat Mangal,@,@,@,@"); 
