--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -147,7 +147,7 @@
         list.push("P1-Villa-09,@Raghvendra Sharma,@,@,@,@"); 
         list.push("P1-Villa-10,@Jogendra Sachdeva,@1000,@,@,@"); 
         list.push("P1-Villa-11,@Sundeep Mahala,@,@,@,@"); 
-        list.push("P1-Villa-12,@Gaurav Kothari,@,@,@,@"); 
+        list.push("P1-Villa-12,@Gaurav Kothari,@1000,@,@,@"); 
         list.push("P1-Villa-13,@Anil Sharma,@,@,@,@"); 
         list.push("P1-Villa-14,@Ayush	Shandilya,@,@,@,@"); 
         list.push("P1-Villa-15,@Sunil	Kumar,@,@,@,@"); 
