--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -166,7 +166,7 @@
         list.push("P1-Villa-28,@Mohit Juneja,@,@,@,@"); 
         list.push("P1-Villa-29,@Lokshita Mathur,@,@,@,@"); 
         list.push("P1-Villa-30,@Peeyush Mathur,@,@,@,@"); 
-        list.push("P1-Villa-31,@Mahesh Taparia,@,@,@,@"); 
+        list.push("P1-Villa-31,@Mahesh Taparia,@1000,@,@,@"); 
         list.push("P1-Villa-32,@Peeyush Verma,@,@,@,@"); 
         list.push("P1-Villa-33,@Prakash Joshi,@,@,@,@"); 
         list.push("P1-Villa-34,@Vijay Meena,@,@,@,@"); 
