--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -140,7 +140,7 @@
 	 var list = [];
      list.push("P1-Villa-01,@Pooja Sharma,@,@,@,@,@"); 
         list.push("P1-Villa-04,@Bhupesh Saini,@,@,@,@"); 
-        list.push("P1-Villa-05,@Shishir Maltiyar,@,@,@,@"); 
+        list.push("P1-Villa-05,@Shishir Maltiyar,@1000,@,@,@"); 
         list.push("P1-Villa-06,@Hemant Kumar,@,@,@,@"); 
         list.push("P1-Villa-07,@Rahul Pandey,@1000,@,@,@"); 
         list.push("P1-Villa-08,@Anil Sharma,@,@,@,@"); 
