--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -163,7 +163,7 @@
         list.push("P1-Villa-25,@Pooja Khandelwal,@,@,@,@"); 
         list.push("P1-Villa-26,@Rakesh Kumar,@1000,@,@,@"); 
         list.push("P1-Villa-27,@Deepesh Sharma,@,@,@,@"); 
-        list.push("P1-Villa-28,@Mohit Juneja,@,@,@,@"); 
+        list.push("P1-Villa-28,@Mohit Juneja,@1000,@,@,@"); 
         list.push("P1-Villa-29,@Lokshita Mathur,@,@,@,@"); 
         list.push("P1-Villa-30,@Peeyush Mathur,@,@,@,@"); 
         list.push("P1-Villa-31,@Mahesh Taparia,@1000,@,@,@"); 
