--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -188,11 +188,11 @@
         list.push("P1-Villa-50,@Abhishek Garg,@,@,@,@"); 
         list.push("P1-Villa-51,@Jatin Kumar,@,@,@,@"); 
         list.push("P1-Villa-52,@Shailesh Bansal,@,@,@,@"); 
-        list.push("P1-Villa-53,@Rohit Jain,@,@,@,@"); 
+        list.push("P1-Villa-53,@Rohit Jain,@1000,@,@,@"); 
         list.push("P1-Villa-54,@Vinod Kumar Garg,@,@,@,@"); 
         list.push("P1-Villa-55,@Raj Kamal,@,@,@,@"); 
 
-        
+
         list.push("P1-Villa-62,@Lal Singh,@,@,@,@"); 
         list.push("P1-Villa-63,@Yogesh Ji,@,@,@,@"); 
         list.push("P1-Villa-64,@Sahil Meghnani,@1000,@,@,@");
@@ -234,7 +234,7 @@
         list.push("P1-Villa-99,@Sakshi Singh,@,@,@,@"); 
         list.push("P1-Villa-100,@Akansha Garg,@,@,@,@"); 
         list.push("P1-Villa-101,@Laxmi Agarwal,@,@,@,@"); 
-        list.push("P1-Villa-102,@Pratima Singh,@,@,@,@"); 
+        list.push("P1-Villa-102,@Pratima Singh,@1000,@,@,@"); 
         list.push("P1-Villa-103,@Vandana Soni,@,@,@,@"); 
         list.push("P1-Villa-104,@Rajender Singh,@,@,@,@"); 
         list.push("P1-Villa-105,@Vandana Soni,@,@,@,@"); 
