--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 
 			</section>
 		</header>
+		<!--		
+
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12" align="center">
@@ -88,7 +90,6 @@
 				</div>
 			</div>
 		</div>
-<!--		
 		<h4 style="color: red"># Key Highlights ......</h4> 
 		<p style="color: blue">* Till now, Jul-Aug-Sep 2023 Maintenance Balance: 3,24,000</p> 
 		<p style="color: blue">* Socity Activity Fund Balance: 2,711</p> 
@@ -127,15 +128,15 @@
 	<img src="img/Ramnavmi.jpg" width="260" height="170" />s
 	 </marquee>
 	 -->
-<!--x
+
    <img id="myid" class="NO-CACHE" data-src="img/HolikaDhan.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 
 	
-		<p style= "color:rgb(211, 104, 16)"> Holika Dahan: 6th March 2023, Sharp 6:00 PM</p>
+		<p style= "color:rgb(211, 104, 16)"> Holika Dahan: 24th March 2024, Sharp 6:00 PM</p>
 		<img id="myid" class="NO-CACHE" data-src="img/HappyHoli.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
-		<p style= "color:rgb(78, 26, 248)"> Holi Celebration: 7th March 2023, 9:00 AM TO 12:30 PM </p>
-		<p style= "color:rgb(238, 10, 150)"> Holi Color (Gulal) and Thandai will available from cultural team</p>
-		<p style= "color:rgb(6, 189, 22)"> Holi Dinner, on 7th March, From 7:00 To 8:00 PM </p>
+		<p style= "color:rgb(78, 26, 248)"> Holi Celebration: 25th March 2024, 9:00 AM TO 12:30 PM </p>
+		<p style= "color:rgb(238, 10, 150)"> Holi Color (Gulal) and Thandai will be available from cultural team</p>
+<!--x		<p style= "color:rgb(6, 189, 22)"> Holi Dinner, on 7th March, From 7:00 To 8:00 PM </p>
 
 
 
