--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -148,7 +148,7 @@
         list.push("P1-Villa-10,@Jogendra Sachdeva,@1000,@,@,@"); 
         list.push("P1-Villa-11,@Sundeep Mahala,@,@,@,@"); 
         list.push("P1-Villa-12,@Gaurav Kothari,@1000,@,@,@"); 
-        list.push("P1-Villa-13,@Anil Sharma,@,@,@,@"); 
+        list.push("P1-Villa-13,@Anil Sharma,@1000,@,@,@"); 
         list.push("P1-Villa-14,@Ayush	Shandilya,@,@,@,@"); 
         list.push("P1-Villa-15,@Sunil	Kumar,@,@,@,@"); 
         list.push("P1-Villa-16,@Preeti Meena,@,@,@,@"); 
@@ -169,7 +169,7 @@
         list.push("P1-Villa-31,@Mahesh Taparia,@1000,@,@,@"); 
         list.push("P1-Villa-32,@Peeyush Verma,@,@,@,@"); 
         list.push("P1-Villa-33,@Prakash Joshi,@,@,@,@"); 
-        list.push("P1-Villa-34,@Vijay Meena,@,@,@,@"); 
+        list.push("P1-Villa-34,@Vijay Meena,@1000,@,@,@"); 
         list.push("P1-Villa-35,@D V Saraswat & Kusum Saraswat,@,@,@,@"); 
         list.push("P1-Villa-36,@Harish Kumar Yadav,@,@,@,@"); 
         list.push("P1-Villa-37,@Gajendra Sharma,@1000,@,@,@"); 
