--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -192,6 +192,12 @@
         list.push("P1-Villa-54,@Vinod Kumar Garg,@,@,@,@"); 
         list.push("P1-Villa-55,@Raj Kamal,@,@,@,@"); 
 
+        list.push("P1-Villa-56_57A,@Kajor Mal Goyal,@,@,@,@"); 
+        list.push("P1-Villa-58_57B,@Deepak Swaroop Garg,@,@,@,@"); 
+        list.push("P1-Villa-59,@Kamal Preet Singh Narula,@,@,@,@"); 
+        list.push("P1-Villa-60,@Santra Devi,@,@,@,@"); 
+        list.push("P1-Villa-61,@Divanshi Dhanjani,@,@,@,@"); 
+
 
         list.push("P1-Villa-62,@Lal Singh,@,@,@,@"); 
         list.push("P1-Villa-63,@Yogesh Ji,@,@,@,@"); 
