--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -183,7 +183,13 @@
         list.push("P1-Villa-54,@Vinod Kumar Garg,@9898386595,@2,@Owner"); 
         list.push("P1-Villa-55,@Raj Kamal,@8890521834,@2,@Owner"); 
 
-        list.push("P1-Villa-62,@Lal Singh,@,@2,@Owner"); 
+        list.push("P1-Villa-56_57A,@Kajor Mal Goyal,@9414315683,@2,@Owner"); 
+        list.push("P1-Villa-58_57B,@Deepak Swaroop Garg,@9414039646,@2,@Owner"); 
+        list.push("P1-Villa-59,@Kamal Preet Singh Narula,@9855156665,@2,@Owner"); 
+        list.push("P1-Villa-60,@Santra Devi,@9460895565,@2,@Owner"); 
+        list.push("P1-Villa-61,@Divanshi Dhanjani,@7014700430,@2,@Owner"); 
+
+        list.push("P1-Villa-62,@Lal Singh,@9950201260,@2,@Owner"); 
         list.push("P1-Villa-63,@Yogesh Ji,@8583956466,@4,@Owner"); 
         list.push("P1-Villa-64,@Sahil Meghnani,@9929080804,@2,@Owner");
         list.push("P1-Villa-65,@Jalaj Rajpurohit,@9820684534,@5,@Owner");
