--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -180,7 +180,7 @@
         list.push("P1-Villa-42,@Prakash Gaur,@1000,@,@,@"); 
         list.push("P1-Villa-43,@Arun Tripathi,@,@,@,@"); 
         list.push("P1-Villa-44,@Ravindra Verma,@,@,@,@"); 
-        list.push("P1-Villa-45,@Nand Singh Rajawat,@,@,@,@"); 
+        list.push("P1-Villa-45,@Nand Singh Rajawat,@1000,@,@,@"); 
         list.push("P1-Villa-46,@Vikas Mahala,@,@,@,@"); 
         list.push("P1-Villa-47,@Manoj Ji,@,@,@,@"); 
         list.push("P1-Villa-48,@R C Sharma ,@1000,@,@,@"); 
