--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -236,7 +236,7 @@
         list.push("P1-Villa-95,@Deepti Sharma,@,@,@,@"); 
         list.push("P1-Villa-96,@George Pal Singh,@,@,@,@"); 
         list.push("P1-Villa-97,@Surendra Kumawat,@,@,@,@"); 
-        list.push("P1-Villa-98,@Hitesh Jain,@,@,@,@"); 
+        list.push("P1-Villa-98,@Hitesh Jain,@1000,@,@,@"); 
         list.push("P1-Villa-99,@Sakshi Singh,@,@,@,@"); 
         list.push("P1-Villa-100,@Akansha Garg,@,@,@,@"); 
         list.push("P1-Villa-101,@Laxmi Agarwal,@,@,@,@"); 
