--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -210,7 +210,7 @@
         list.push("P1-Villa-70,@Vineet Sharma,@,@,@,@"); 
         list.push("P1-Villa-71,@Suresh kumar Sharma,@1000,@,@,@"); 
         list.push("P1-Villa-72,@Nikesh Chaudhary,@,@,@,@"); 
-        list.push("P1-Villa-73,@Richa Sharma,@,@,@,@"); 
+        list.push("P1-Villa-73,@Richa Sharma,@1000,@,@,@"); 
         list.push("P1-Villa-74,@Praveen Kumar Prajapat,@,@,@,@"); 
         list.push("P1-Villa-75,@Archna Goswami,@1000,@,@,@"); 
         list.push("P1-Villa-76,@Surya Nagal,@1000,@,@,@"); 
