--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -206,7 +206,7 @@
         list.push("P1-Villa-66,@Manju Gehlot,@,@,@,@");
         list.push("P1-Villa-67,@Abhishek Jaiman,@,@,@,@"); 
         list.push("P1-Villa-68,@Shrish Jaiman,@,@,@,@"); 
-        list.push("P1-Villa-69,@Piyush Sharma,@,@,@,@"); 
+        list.push("P1-Villa-69,@Piyush Sharma,@1000,@,@,@"); 
         list.push("P1-Villa-70,@Vineet Sharma,@,@,@,@"); 
         list.push("P1-Villa-71,@Suresh kumar Sharma,@1000,@,@,@"); 
         list.push("P1-Villa-72,@Nikesh Chaudhary,@,@,@,@"); 
