--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -204,10 +204,10 @@
         list.push("P1-Villa-64,@Sahil Meghnani,@1000,@,@,@");
         list.push("P1-Villa-65,@Jalaj Rajpurohit,@1000,@,@,@");
         list.push("P1-Villa-66,@Manju Gehlot,@,@,@,@");
-        list.push("P1-Villa-67,@Abhishek Jaiman,@,@,@,@"); 
+        list.push("P1-Villa-67,@Abhishek Jaiman,@1000,@,@,@"); 
         list.push("P1-Villa-68,@Shrish Jaiman,@,@,@,@"); 
         list.push("P1-Villa-69,@Piyush Sharma,@1000,@,@,@"); 
-        list.push("P1-Villa-70,@Vineet Sharma,@,@,@,@"); 
+        list.push("P1-Villa-70,@Vineet Sharma,@1000,@,@,@"); 
         list.push("P1-Villa-71,@Suresh kumar Sharma,@1000,@,@,@"); 
         list.push("P1-Villa-72,@Nikesh Chaudhary,@,@,@,@"); 
         list.push("P1-Villa-73,@Richa Sharma,@1000,@,@,@"); 
