--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -144,12 +144,12 @@
         list.push("P1-Villa-06,@Hemant Kumar,@Vacant,@,@,@"); 
         list.push("P1-Villa-07,@Rahul Pandey,@1000,@,@,@"); 
         list.push("P1-Villa-08,@Anil Sharma,@Vacant,@,@,@"); 
-        list.push("P1-Villa-09,@Raghvendra Sharma,@Vacant,@,@,@"); 
+        list.push("P1-Villa-09,@Raghvendra Sharma,@Pending,@,@,@"); 
         list.push("P1-Villa-10,@Jogendra Sachdeva,@1000,@,@,@"); 
-        list.push("P1-Villa-11,@Sundeep Mahala,@Vacant,@,@,@"); 
+        list.push("P1-Villa-11,@Sundeep Mahala,@Pending,@,@,@"); 
         list.push("P1-Villa-12,@Gaurav Kothari,@1000,@,@,@"); 
         list.push("P1-Villa-13,@Anil Sharma,@1000,@,@,@"); 
-        list.push("P1-Villa-14,@Ayush	Shandilya,@Vacant,@,@,@"); 
+        list.push("P1-Villa-14,@Ayush	Shandilya,@Pending,@,@,@"); 
         list.push("P1-Villa-15,@Sunil	Kumar,@Vacant,@,@,@"); 
         list.push("P1-Villa-16,@Preeti Meena,@Vacant,@,@,@"); 
         list.push("P1-Villa-17,@khushi Khandelwal,@Vacant,@,@,@"); 
@@ -157,12 +157,12 @@
         list.push("P1-Villa-19,@Hitesh Sain,@Vacant,@,@,@"); 
         list.push("P1-Villa-20,@Ved Prakash Parashar,@Pending,@,@,@"); 
         list.push("P1-Villa-21,@Dariya Singh,@Vacant,@,@,@"); 
-        list.push("P1-Villa-22,@Shivani sanjeev sharma,@Vacant,@,@,@"); 
+        list.push("P1-Villa-22,@Shivani sanjeev sharma,@Pending,@,@,@"); 
         list.push("P1-Villa-23,@Akshay Saraswat,@Vacant,@,@,@"); 
         list.push("P1-Villa-24,@Abhimanyu Saraswat,@1000,@,@,@"); 
         list.push("P1-Villa-25,@Pooja Khandelwal,@Vacant,@,@,@"); 
         list.push("P1-Villa-26,@Rakesh Kumar,@1000,@,@,@"); 
-        list.push("P1-Villa-27,@Deepesh Sharma,@Vacant,@,@,@"); 
+        list.push("P1-Villa-27,@Deepesh Sharma,@Pending,@,@,@"); 
         list.push("P1-Villa-28,@Mohit Juneja,@1000,@,@,@"); 
         list.push("P1-Villa-29,@Lokshita Mathur,@Vacant,@,@,@"); 
         list.push("P1-Villa-30,@Peeyush Mathur,@Vacant,@,@,@"); 
@@ -181,11 +181,11 @@
         list.push("P1-Villa-43,@Arun Tripathi,@Pending,@,@,@"); 
         list.push("P1-Villa-44,@Ravindra Verma,@Pending,@,@,@"); 
         list.push("P1-Villa-45,@Nand Singh Rajawat,@1000,@,@,@"); 
-        list.push("P1-Villa-46,@Vikas Mahala,@Vacant,@,@,@"); 
-        list.push("P1-Villa-47,@Manoj Ji,@Vacant,@,@,@"); 
+        list.push("P1-Villa-46,@Vikas Mahala,@Pending,@,@,@"); 
+        list.push("P1-Villa-47,@Manoj Ji,@Pending,@,@,@"); 
         list.push("P1-Villa-48,@R C Sharma ,@1000,@,@,@"); 
         list.push("P1-Villa-49,@Sunita Verma,@Vacant,@,@,@"); 
-        list.push("P1-Villa-50,@Abhishek Garg,@Vacant,@,@,@"); 
+        list.push("P1-Villa-50,@Abhishek Garg,@Pending,@,@,@"); 
         list.push("P1-Villa-51,@Jatin Kumar,@Vacant,@,@,@"); 
         list.push("P1-Villa-52,@Shailesh Bansal,@Pending,@,@,@"); 
         list.push("P1-Villa-53,@Rohit Jain,@1000,@,@,@"); 
@@ -228,7 +228,7 @@
         list.push("P1-Villa-88,@Pankaj Chauhan & Pushpa Tomar,@Pending,@,@,@"); 
         list.push("P1-Villa-89,@Khem Chand Nagal,@Vacant,@,@,@"); 
         list.push("P1-Villa-90,@Vivek Dubey,@Vacant,@,@,@"); 
-        list.push("P1-Villa-91,@Rajendra Prasad Gupta,@Vacant,@,@,@"); 
+        list.push("P1-Villa-91,@Rajendra Prasad Gupta,@Pending,@,@,@"); 
         list.push("P1-Villa-92,@Anil Kumar Gupta,@Vacant,@,@,@"); 
         list.push("P1-Villa-93,@Manju Sexena,@Vacant,@,@,@"); 
         list.push("P1-Villa-94,@Rounak Rajendra Bhatt,@Vacant,@,@,@"); 
