--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -205,7 +205,7 @@
         list.push("P1-Villa-65,@Jalaj Rajpurohit,@1000,@,@,@");
         list.push("P1-Villa-66,@Manju Gehlot,@Pending,@,@,@");
         list.push("P1-Villa-67,@Abhishek Jaiman,@1000,@,@,@"); 
-        list.push("P1-Villa-68,@Shrish Jaiman,@Pending,@,@,@"); 
+        list.push("P1-Villa-68,@Shrish Jaiman,@1000,@,@,@"); 
         list.push("P1-Villa-69,@Piyush Sharma,@1000,@,@,@"); 
         list.push("P1-Villa-70,@Vineet Sharma,@1000,@,@,@"); 
         list.push("P1-Villa-71,@Suresh kumar Sharma,@1000,@,@,@"); 
