--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -187,7 +187,7 @@
         list.push("P1-Villa-49,@Sunita Verma,@Vacant,@,@,@"); 
         list.push("P1-Villa-50,@Abhishek Garg,@Pending,@,@,@"); 
         list.push("P1-Villa-51,@Jatin Kumar,@Vacant,@,@,@"); 
-        list.push("P1-Villa-52,@Shailesh Bansal,@Pending,@,@,@"); 
+        list.push("P1-Villa-52,@Shailesh Bansal,@1000,@,@,@"); 
         list.push("P1-Villa-53,@Rohit Jain,@1000,@,@,@"); 
         list.push("P1-Villa-54,@Vinod Kumar Garg,@Vacant,@,@,@"); 
         list.push("P1-Villa-55,@Raj Kamal,@Vacant,@,@,@"); 
