--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -222,7 +222,7 @@
         list.push("P1-Villa-82,@Swati Bansal,@Vacant,@,@,@"); 
         list.push("P1-Villa-83,@Tarun Sharda,@Vacant,@,@,@"); 
         list.push("P1-Villa-84,@Tarun Sharda,@Vacant,@,@,@"); 
-        list.push("P1-Villa-85,@Pradeep Verma,@Pending,@,@,@"); 
+        list.push("P1-Villa-85,@Pradeep Verma,@1000,@,@,@"); 
         list.push("P1-Villa-86,@Surendra Agrawal,@Pending,@,@,@"); 
         list.push("P1-Villa-87,@Devendra Singh,@Pending,@,@,@"); 
         list.push("P1-Villa-88,@Pankaj Chauhan & Pushpa Tomar,@Pending,@,@,@"); 
