--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
 		<p style= "color:rgb(78, 26, 248)"> Holi Celebration: 25th March 2024, 9:00 AM TO 12:30 PM </p>
 		<p style= "color:rgb(238, 10, 150)"> Holi Color (Gulal), DJ Songs and Thandai will be available from cultural team</p>
 		<pre style="color: rgb(35, 9, 228)">
-			25 March, शाम 6.00 बजे से फेज - I गार्डन एरिया में ही गोल-गप्पे, छोला-कुलच्छे, दाल के पकौड़े एवं गुलाब जामुन की स्टालें लगाई जाने की व्यवस्था की गई है 
+			25 March, शाम 6.00 बजे से फेज - I गार्डन एरिया में ही 
+			गोल-गप्पे, छोला-कुलच्छे, दाल के पकौड़े एवं गुलाब जामुन 
+			की स्टालें लगाई जाने की व्यवस्था की गई है 
+			
 			इन स्टालों पर भुगतान कर चट पटे व्यंजनों का आनंद लिया जा सकेगा.
 			रेट लिस्ट निम्नानुसार निश्चित की गई है
 			1. छोला-कुलच्छे :- 50/- प्लेट (छोले एवं तीन कुलच्छे प्रति प्लेट ) 
