--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -149,7 +149,7 @@
         list.push("P1-Villa-11,@Sundeep Mahala,@Pending,@,@,@"); 
         list.push("P1-Villa-12,@Gaurav Kothari,@1000,@,@,@"); 
         list.push("P1-Villa-13,@Anil Sharma,@1000,@,@,@"); 
-        list.push("P1-Villa-14,@Ayush	Shandilya,@Pending,@,@,@"); 
+        list.push("P1-Villa-14,@Ayush	Shandilya,@Vacant,@,@,@"); 
         list.push("P1-Villa-15,@Sunil	Kumar,@Vacant,@,@,@"); 
         list.push("P1-Villa-16,@Preeti Meena,@Vacant,@,@,@"); 
         list.push("P1-Villa-17,@khushi Khandelwal,@Vacant,@,@,@"); 
