--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -225,7 +225,7 @@
         list.push("P1-Villa-85,@Pradeep Verma,@1000,@,@,@"); 
         list.push("P1-Villa-86,@Surendra Agrawal,@Pending,@,@,@"); 
         list.push("P1-Villa-87,@Devendra Singh,@Pending,@,@,@"); 
-        list.push("P1-Villa-88,@Pankaj Chauhan & Pushpa Tomar,@Pending,@,@,@"); 
+        list.push("P1-Villa-88,@Pankaj Chauhan & Pushpa Tomar,@1000,@,@,@"); 
         list.push("P1-Villa-89,@Khem Chand Nagal,@Vacant,@,@,@"); 
         list.push("P1-Villa-90,@Vivek Dubey,@Vacant,@,@,@"); 
         list.push("P1-Villa-91,@Rajendra Prasad Gupta,@Pending,@,@,@"); 
