--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -155,9 +155,9 @@
         list.push("P1-Villa-17,@khushi Khandelwal,@Vacant,@,@,@"); 
         list.push("P1-Villa-18,@Pooja	Saxena,@Vacant,@,@,@"); 
         list.push("P1-Villa-19,@Hitesh Sain,@Vacant,@,@,@"); 
-        list.push("P1-Villa-20,@Ved Prakash Parashar,@Pending,@,@,@"); 
+        list.push("P1-Villa-20,@Ved Prakash Parashar,@1000,@,@,@"); 
         list.push("P1-Villa-21,@Dariya Singh,@Vacant,@,@,@"); 
-        list.push("P1-Villa-22,@Shivani sanjeev sharma,@Pending,@,@,@"); 
+        list.push("P1-Villa-22,@Shivani sanjeev sharma,@1000,@,@,@"); 
         list.push("P1-Villa-23,@Akshay Saraswat,@Vacant,@,@,@"); 
         list.push("P1-Villa-24,@Abhimanyu Saraswat,@1000,@,@,@"); 
         list.push("P1-Villa-25,@Pooja Khandelwal,@Vacant,@,@,@"); 
