--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -178,7 +178,7 @@
         list.push("P1-Villa-40,@Anita Kanwar,@Vacant,@,@,@"); 
         list.push("P1-Villa-41,@Monika Mittal,@Vacant,@,@,@"); 
         list.push("P1-Villa-42,@Prakash Gaur,@1000,@,@,@"); 
-        list.push("P1-Villa-43,@Arun Tripathi,@Pending,@,@,@"); 
+        list.push("P1-Villa-43,@Arun Tripathi,@1000,@,@,@"); 
         list.push("P1-Villa-44,@Ravindra Verma,@Pending,@,@,@"); 
         list.push("P1-Villa-45,@Nand Singh Rajawat,@1000,@,@,@"); 
         list.push("P1-Villa-46,@Vikas Mahala,@Pending,@,@,@"); 
