--- a/index.html
+++ b/index.html
@@ -129,10 +129,12 @@
 	 </marquee>
 	 -->
 
+	 <p style= "color:rgb(78, 26, 248)">  इस वर्ष हमारे शुभ विला परिसर में फाग - उत्सव का आरम्भ पंडित श्री अशोक भारद्वाज एवं श्रीमती दुर्गेशवरी देवी द्वारा राम जानकी मंदिर में दिनाँक 17.03.2024 को आयोजित फागोत्सव से हो रहा है </p>
+
    <img id="myid" class="NO-CACHE" data-src="img/HolikaDhan.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 
 	
-		<p style= "color:rgb(211, 104, 16)"> Holika Dahan: 24th March 2024, As per muhurat 11:15 PM </p>
+		<p style= "color:rgb(233, 45, 12)"> Holika Dahan: 24th March 2024, As per muhurat 11:15 PM </p>
 		<img id="myid" class="NO-CACHE" data-src="img/HoliFaag.jpg"  width="120px" heigt="110px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 
 		<p style= "color:rgb(78, 26, 248)"> Faag Mahotsav with DJ: 24th March 2024, 9:00 PM TO 11:15 PM </p>
@@ -140,8 +142,8 @@
 		<p style= "color:rgb(78, 26, 248)"> Holi Celebration: 25th March 2024, 9:00 AM TO 12:30 PM </p>
 		<p style= "color:rgb(238, 10, 150)"> Holi Color (Gulal), DJ Songs and Thandai will be available from cultural team</p>
 <pre style="color: rgb(35, 9, 228)">
- 25 March, शाम 6.00 बजे से फेज - I गार्डन एरिया में ही 
- गोल-गप्पे, छोला-कुलच्छे, दाल के पकौड़े एवं गुलाब जामुन 
+ 25 March, शाम 6.00 बजे से फेज - I गार्डन एरिया में ही फेज - I के 
+ सभी सदस्यों के लिए गोल-गप्पे, छोला-कुलच्छे, दाल के पकौड़े एवं गुलाब जामुन 
  की स्टालें लगाई जाने की व्यवस्था की गई है 
 
  इन स्टालों पर भुगतान कर चट पटे व्यंजनों का आनंद लिया जा सकेगा.
@@ -150,6 +152,9 @@
   2. गोल-गप्पे :- 20/-(6 नग)
   3. दाल पकौड़े :- 30/- प्लेट (200 ग्राम) 
   4. गुलाब - जामुन :- 15/-  (प्रति नग)
+
+  फेज - II के सभी सदस्यों के लिए साउथ इंडियन भोज इडली, डोसा, व बड़े कि प्लेट 150/- रू प्रति प्लेट कूपन आधारित की गई है
+ 
 	
 </pre>
 <!--x		<p style= "color:rgb(6, 189, 22)"> Holi Dinner, on 7th March, From 7:00 To 8:00 PM </p>
