--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
 	 </marquee>
 	 -->
 
+	 <img id="myid" class="NO-CACHE" data-src="img/HoliF.jpg"  width="120px" heigt="110px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
+
 	 <p style= "color:rgb(78, 26, 248)">  इस वर्ष हमारे शुभ विला परिसर में फाग - उत्सव का आरम्भ पंडित श्री अशोक भारद्वाज एवं श्रीमती दुर्गेशवरी देवी द्वारा राम जानकी मंदिर में दिनाँक 17.03.2024 को आयोजित फागोत्सव से हो रहा है </p>
 
    <img id="myid" class="NO-CACHE" data-src="img/HolikaDhan.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
@@ -153,7 +155,8 @@
   3. दाल पकौड़े :- 30/- प्लेट (200 ग्राम) 
   4. गुलाब - जामुन :- 15/-  (प्रति नग)
 
-  फेज - II के सभी सदस्यों के लिए साउथ इंडियन भोज इडली, डोसा, व बड़े कि प्लेट 150/- रू प्रति प्लेट कूपन आधारित की गई है
+  फेज - II के सभी सदस्यों के लिए साउथ इंडियन भोज इडली, डोसा, 
+  व बड़े कि प्लेट 150/- रू प्रति प्लेट कूपन आधारित की गई है
  
 	
 </pre>
