--- a/index.html
+++ b/index.html
@@ -129,18 +129,19 @@
 	 </marquee>
 	 -->
 
-	 <img id="myid" class="NO-CACHE" data-src="img/HoliF.jpg"  width="120px" heigt="110px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
+	 <img id="myid" class="NO-CACHE" data-src="img/HoliF.jpg"  width="140px" heigt="120px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 
-	 <p style= "color:rgb(78, 26, 248)">  इस वर्ष हमारे शुभ विला परिसर में फाग - उत्सव का आरम्भ पंडित श्री अशोक भारद्वाज एवं श्रीमती दुर्गेशवरी देवी द्वारा राम जानकी मंदिर में दिनाँक 17.03.2024 को आयोजित फागोत्सव से हो रहा है </p>
+	 <p style= "color:rgb(78, 26, 248)">  इस वर्ष हमारे शुभ विला परिसर में फाग - उत्सव का आरम्भ पंडित श्री अशोक भारद्वाज एवं </p>
+	 <p style= "color:rgb(78, 26, 248)">  श्रीमती दुर्गेशवरी देवी द्वारा राम जानकी मंदिर में दिनाँक 17.03.2024 को आयोजित फागोत्सव से हो रहा है </p>
 
    <img id="myid" class="NO-CACHE" data-src="img/HolikaDhan.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 
 	
 		<p style= "color:rgb(233, 45, 12)"> Holika Dahan: 24th March 2024, As per muhurat 11:15 PM </p>
-		<img id="myid" class="NO-CACHE" data-src="img/HoliFaag.jpg"  width="120px" heigt="110px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
+		<img id="myid" class="NO-CACHE" data-src="img/HoliFaag.jpg"  width="140px" heigt="120px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 
 		<p style= "color:rgb(78, 26, 248)"> Faag Mahotsav with DJ: 24th March 2024, 9:00 PM TO 11:15 PM </p>
-		<img id="myid" class="NO-CACHE" data-src="img/HappyHoli.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
+		<img id="myid" class="NO-CACHE" data-src="img/HappyHoli.jpg"  width="140px" heigt="120px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 		<p style= "color:rgb(78, 26, 248)"> Holi Celebration: 25th March 2024, 9:00 AM TO 12:30 PM </p>
 		<p style= "color:rgb(238, 10, 150)"> Holi Color (Gulal), DJ Songs and Thandai will be available from cultural team</p>
 <pre style="color: rgb(35, 9, 228)">
