--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
 
 	 <img id="myid" class="NO-CACHE" data-src="img/HoliF.jpg"  width="140px" heigt="120px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 
-	 <p style= "color:rgb(78, 26, 248)">  इस वर्ष हमारे शुभ विला परिसर में फाग - उत्सव का आरम्भ पंडित श्री अशोक भारद्वाज एवं </p>
-	 <p style= "color:rgb(78, 26, 248)">  श्रीमती दुर्गेशवरी देवी द्वारा राम जानकी मंदिर में दिनाँक 17.03.2024 को आयोजित फागोत्सव से हो रहा है </p>
+	 <p style= "color:rgb(78, 26, 248)">  इस वर्ष हमारे शुभ विला परिसर में फाग - उत्सव का आरम्भ पंडित श्री अशोक भारद्वाज एवं श्रीमती दुर्गेशवरी देवी द्वारा राम जानकी मंदिर में दिनाँक 17.03.2024 को आयोजित फागोत्सव से हो रहा है </p>
 
    <img id="myid" class="NO-CACHE" data-src="img/HolikaDhan.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 
