--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -182,7 +182,7 @@
         list.push("P1-Villa-43,@Arun Tripathi,@1000,@,@,@"); 
         list.push("P1-Villa-44,@Ravindra Verma,@Pending,@,@,@"); 
         list.push("P1-Villa-45,@Nand Singh Rajawat,@1000,@,@,@"); 
-        list.push("P1-Villa-46,@Vikas Mahala,@Pending,@,@,@"); 
+        list.push("P1-Villa-46,@Vikas Mahala,@1000,@,@,@"); 
         list.push("P1-Villa-47,@Manoj Ji,@1000,@,@,@"); 
         list.push("P1-Villa-48,@R C Sharma ,@1000,@,@,@"); 
         list.push("P1-Villa-49,@Sunita Verma,@Vacant,@,@,@"); 
