--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -197,11 +197,11 @@
         list.push("P1-Villa-58_57B,@Deepak Swaroop Garg,@Vacant,@,@,@"); 
         list.push("P1-Villa-59,@Kamal Preet Singh Narula,@Vacant,@,@,@"); 
         list.push("P1-Villa-60,@Santra Devi,@Vacant,@,@,@"); 
-        list.push("P1-Villa-61,@Divanshi Dhanjani,@Pending,@,@,@"); 
+        list.push("P1-Villa-61,@Divanshi Dhanjani,@1000,@,@,@"); 
 
 
         list.push("P1-Villa-62,@Lal Singh,@Vacant,@,@,@"); 
-        list.push("P1-Villa-63,@Yogesh Ji,@Pending,@,@,@"); 
+        list.push("P1-Villa-63,@Yogesh Ji,@1000,@,@,@"); 
         list.push("P1-Villa-64,@Sahil Meghnani,@1000,@,@,@");
         list.push("P1-Villa-65,@Jalaj Rajpurohit,@1000,@,@,@");
         list.push("P1-Villa-66,@Manju Gehlot,@Pending,@,@,@");
