--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -50,7 +50,7 @@
                                     <li><a href="index.html">HOME </a></li>
                                     <li><a href="MonthlyActivityFund.html">Society Activity Fund</a></li>
 									
-                                    <li class="activeHeader"><a href="MonthlyCreditDebit.html">Collection/Expenditure</a></li>
+                                    <li class="activeHeader"><a href="MonthlyCreditDebit.html">Collection\Expenditure</a></li>
                                     <li><a href="ContactForm.html">Feedback\Suggestions</a></li>
                                 </ul>
                             </div>
@@ -91,10 +91,10 @@
         <table id="displayTableDetails" class="table table-striped table-bordered table-hover">
             <thead>
                 <th>Sr. No</th>
-                <th>Collection/Expenditure Details</th>
+                <th>Collection\Expenditure Details</th>
                 <th>From\At</th>
                 <th>Amount</th>
-                <th>Credit/Debit</th>
+                <th>Credit\Debit</th>
             </thead>
             <tbody></tbody>
             </table>
