--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<li><a href="OwnersRentDetails.html">Owners\Tenants Details</a></li>
 									 <li><a href="MonthlyActivityFund.html">Society Activity Fund</a></li>
 									<!--For Now <li><a href="MonthlyMaintenance.html">Monthly Maintenance</a></li>-->
-									<li><a href="MonthlyCreditDebit.html">Collection/Expenditure</a></li>
+									<li><a href="MonthlyCreditDebit.html">Collection\Expenditure</a></li>
 									<!--<li><a href="OtherActivity.html">Other Activity</a></li>-->
 									<!--For Now <li><a href="MeetingHistory.html">Meeting History</a></li>-->
 									<!--<li><a href="VisitorDetails.html">Visitor Details</a></li>-->
@@ -129,11 +129,11 @@
 	 </marquee>
 	 -->
 
-	 <img id="myid" class="NO-CACHE" data-src="img/HoliF.jpg"  width="140px" heigt="120px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
+<!--	 <img id="myid" class="NO-CACHE" data-src="img/HoliF.jpg"  width="140px" heigt="120px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 
 	 <p style= "color:rgb(78, 26, 248)">  इस वर्ष हमारे शुभ विला परिसर में फाग - उत्सव का आरम्भ पंडित श्री अशोक भारद्वाज एवं श्रीमती दुर्गेशवरी देवी द्वारा राम जानकी मंदिर में दिनाँक 17.03.2024 को आयोजित फागोत्सव से हो रहा है </p>
-
-   <img id="myid" class="NO-CACHE" data-src="img/HolikaDhan.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
+-->
+   <img id="myid" class="NO-CACHE" data-src="img/HolikaDhan.jpg"  width="140px" heigt="120px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 
 	
 		<p style= "color:rgb(233, 45, 12)"> Holika Dahan: 24th March 2024, As per muhurat 11:15 PM </p>
