--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -51,7 +51,7 @@
                                     <li><a href="index.html">HOME </a></li>
                                     <li class="activeHeader"><a href="MonthlyActivityFund.html">Society Activity Fund</a></li>
                                     <!--<li ><a href="OneTimeCollection.html">OneTime Collection</a></li>-->
-                                    <li><a href="MonthlyCreditDebit.html">Collection/Expenditure</a></li>
+                                    <li><a href="MonthlyCreditDebit.html">Collection\Expenditure</a></li>
                                     <li><a href="ContactForm.html">Feedback\Suggestions</a></li>
                                 </ul>
                             </div>
@@ -68,7 +68,7 @@
                 <br>
                 <!--<h4 style="color:darkgreen">  Society Account Details </h4>
                 <h4 style="color:darkgreen">  Account: ########### , IFSC Code: $$$$$$$$$$ </h4>-->
-                <h4 style="color:darkgreen"> Quarterly Amount Collection 1000, Cash at [ Villa No. 65 ] / Online at 9820684534 </h4>
+                <h4 style="color:darkgreen"> Quarterly Amount Collection 1000, Cash at [ Villa No. 65 ] \ Online at 9820684534 </h4>
                 
                 <br>
                 <h4 style="color:darkgreen">  Final Balance = <span id="TotalCollection"></span> </h4>
